--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
 					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<a href="https://rubavathimanoharan.github.io/Birthday/Rathi%20Birthday/index.html">click here</a>
 					<button class="btn btn-primary" id="play">Play Music</button>
 					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
 					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
@@ -177,6 +176,7 @@
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary"><a href="https://rubavathimanoharan.github.io/Birthday/Rathi%20Birthday/index.html">click here</a></button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
