--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
-					<button class="btn btn-primary"><a href="https://rubavathimanoharan.github.io/Birthday/Rathi%20Birthday/index.html">click here</a></button>
+					<form action="https://rubavathimanoharan.github.io/Birthday/Rathi%20Birthday/index.html">
+    						<input type="submit" value="Ammuku Kummuku Amal Dummaal..." />
+					</form>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
