--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
 					<form action="https://rubavathimanoharan.github.io/Birthday/Rathi%20Birthday/index.html">
-    						<input type="submit" value="Ammuku Kummuku Amal Dummaal..." />
+						<button class="btn btn-primary>
+    							<input type="submit"  value="Ammuku Kummuku Amal Dummaal..." />
+						</button>
 					</form>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
