--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
 					<form action="https://rubavathimanoharan.github.io/Birthday/Rathi%20Birthday/index.html">
-						<button class="btn btn-primary>
+						<button class="btn btn-primary">
     							<input type="submit"  value="Amuku dumuku damal dumil...">
 						</button>
 					</form>
