--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 					<button class="btn btn-primary" id="story">A mesage for you</button>
 					<form action="https://rubavathimanoharan.github.io/Birthday/Rathi%20Birthday/index.html">
 						<button class="btn btn-primary">
-    							<input type="submit"  value="Amuku dumuku damal dumil...">
+    							<input type="submit"  value="kadasiyaga click seyavum..."/>
 						</button>
 					</form>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
