--- a/index.html
+++ b/index.html
@@ -177,9 +177,7 @@
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
 					<form action="https://rubavathimanoharan.github.io/Birthday/Rathi%20Birthday/index.html">
-						<button class="btn btn-primary">
-    							<input type="submit"  value="kadasiyaga click seyavum..."/>
-						</button>
+						<button type="submit" form="form1" value="last a click pannu sneghan">Submit</button>
 					</form>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
